Delete all endpoint added for pretty tests only YOU FOOL
