# swagger/spring-server/src/main/java/io/pestakit/status/api/endpoints/StatusApiController.java
@@ -147,6 +147,13 @@ public class StatusApiController implements ServicesApi
       return null;
    }
 
+   @Override
+   public ResponseEntity<Void> deleteServices()
+   {
+      serviceRepository.deleteAll();
+      return new ResponseEntity<Void>(HttpStatus.OK);
+   }
+
    ////////////////////////////////////////////////////////////////////////////////////////////
    ///////////////////// PRIVATE METHODS //////////////////////////////////////////////////////
    ////////////////////////////////////////////////////////////////////////////////////////////
